--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Vanxum</h1>
-        <h2>vanxum home site</h2>
-        <a href="https://github.com/vanxum/vanxum" class="button"><small>View project on</small>GitHub</a>
+        <h1>西安万像电子有限公司</h1>
+        <h2>万像科技</h2>
       </div>
     </header>
 
