--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>万像 by vanxum</title>
+    <title>西安万像电子科技有限公司</title>
   </head>
 
   <body>
@@ -22,17 +22,11 @@
           <h2>西安万像电子科技有限公司</h2>
         </header>
 
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/vanxum/vanxum/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/vanxum/vanxum/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/vanxum/vanxum" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
-
         <hr>
 
         <section id="main_content">
           <h3>
-<a name="%E6%AC%A2%E8%BF%8E%E5%85%89%E4%B8%B4%E8%A5%BF%E5%AE%89%E4%B8%87%E5%83%8F%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8%E7%BD%91%E7%AB%99%E5%BB%BA%E8%AE%BE%E4%B8%AD" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E5%85%89%E4%B8%B4%E8%A5%BF%E5%AE%89%E4%B8%87%E5%83%8F%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8%E7%BD%91%E7%AB%99%E5%BB%BA%E8%AE%BE%E4%B8%AD"><span class="octicon octicon-link"></span></a>欢迎光临西安万像电子科技有限公司，网站建设中.</h3>
+<a name="%E6%AC%A2%E8%BF%8E%E5%85%89%E4%B8%B4%E8%A5%BF%E5%AE%89%E4%B8%87%E5%83%8F%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8%E7%BD%91%E7%AB%99%E5%BB%BA%E8%AE%BE%E4%B8%AD" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E5%85%89%E4%B8%B4%E8%A5%BF%E5%AE%89%E4%B8%87%E5%83%8F%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8%E7%BD%91%E7%AB%99%E5%BB%BA%E8%AE%BE%E4%B8%AD"><span class="octicon octicon-link"></span></a>欢迎光临西安万像电子科技有限公司，网站建设中，敬请期待。</h3>
         </section>
 
         <footer>
